// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IaaS should match snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          IaaS Pipelines
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-searchable-dropdown-container"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </span>
                <input
                  class="el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="developerId"
                  placeholder="Search developer organisations"
                  value=""
                />
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        IaaS Pipelines
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-searchable-dropdown-container"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </span>
              <input
                class="el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="developerId"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`IaaS should match snapshot with pipelines 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          IaaS Pipelines
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-searchable-dropdown-container"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </span>
                <input
                  class="el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="developerId"
                  placeholder="Search developer organisations"
                  value=""
                />
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="true"
          data-has-expandable-action="false"
          data-num-columns-excl-action-col="3"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              Name
            </div>
            <div
              class="el-table-header"
            >
              Build Status
            </div>
            <div
              class="el-table-header"
            >
              Repository
            </div>
            <div
              class="el-table-header"
            >
              Delete Pipeline
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Name"
                >
                  reapit-ltd-internal-thoughtless-cub
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Build Status"
                >
                  <span
                    class="el-intent-critical el-status-indicator"
                  />
                  Pre Provisioned
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Repository"
                />
              </div>
              <div
                class="el-table-cta-cell"
              >
                <div
                  class="el-table-cta-icon-container"
                >
                  <span
                    class="el-intent-primary el-icon"
                    style="font-size: 1.2rem;"
                  >
                    <svg />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-pagination-wrap"
        >
          <div
            class="el-pagination-text"
          >
            <input
              class="el-pagination-input"
              value="1"
            />
             of 
            6
          </div>
          <button
            class="el-pagination-button"
            data-testid="back-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
          <button
            class="el-pagination-button"
            data-testid="forward-button"
            type="button"
          >
            <span
              class="el-pagination-primary el-icon"
            >
              <svg />
            </span>
          </button>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        IaaS Pipelines
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-searchable-dropdown-container"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </span>
              <input
                class="el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="developerId"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="3"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            Name
          </div>
          <div
            class="el-table-header"
          >
            Build Status
          </div>
          <div
            class="el-table-header"
          >
            Repository
          </div>
          <div
            class="el-table-header"
          >
            Delete Pipeline
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Name"
              >
                reapit-ltd-internal-thoughtless-cub
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Build Status"
              >
                <span
                  class="el-intent-critical el-status-indicator"
                />
                Pre Provisioned
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Repository"
              />
            </div>
            <div
              class="el-table-cta-cell"
            >
              <div
                class="el-table-cta-icon-container"
              >
                <span
                  class="el-intent-primary el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-pagination-wrap"
      >
        <div
          class="el-pagination-text"
        >
          <input
            class="el-pagination-input"
            value="1"
          />
           of 
          6
        </div>
        <button
          class="el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="el-pagination-primary el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
